recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels
    sierpinski(levels, length);
               ^Sierpinski:3: error: not found: value levels
    sierpinski(levels, length);
               ^Sierpinski:5: error: not found: value levels
    sierpinski(levels, length);
               ^