recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
    sierpinski(levels, length);
    right(120);
    sierpinski(levels, length);
    right(120);
    sierpinski(levels, length);
    right(120);
}
